[tool.poetry]
name = "pucpr-devops-test"
version = "0.1.0"
description = ""
authors = ["Rafael Ortega Bueno <rorteg@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.112.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
